<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- En el estilo de la BottomNavigationBar (styles.xml) se ha deshabilitado la visualización de las etiquetas (atributo 'title'). No obstante, aquí se sigue añadiendo
         dicho atributo ya que se requiere de forma obligatoria -->
    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_pendings"
        android:icon="@drawable/ic_pendings"
        android:title="@string/title_pendings" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>